# aoc2024

./: CMakeLists.txt
day01/: CMakeLists.txt  part1.cu  part2.cu
day02/: CMakeLists.txt  part2.cu
day03/: CMakeLists.txt  part1.cu  part2.cu
day04/: CMakeLists.txt  part2.cu
day05/: CMakeLists.txt  part1.cu  part2.cu
day06/: CMakeLists.txt  part1.cu
day11/: CMakeLists.txt  part1.cpp  part2.cpp
day13/: CMakeLists.txt  part1.cu
include/: utility.h
