cmake_minimum_required(VERSION 3.22)
project(aoc2024 LANGUAGES CXX CUDA)
add_definitions(-DCMAKE_BUILD_TYPE=Debug -DCMAKE_CUDA_HOST_COMPILER=/usr/bin/g++-10)
add_subdirectory(day01)
add_subdirectory(day02)
add_subdirectory(day03)
add_subdirectory(day04)
add_subdirectory(day05)
add_subdirectory(day06)
add_subdirectory(day11)
add_subdirectory(day13)
